--- a/test/fixtures/envoices.yml
+++ b/test/fixtures/envoices.yml
@@ -1,7 +1,4 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  customer: one
-
-two:
-  customer: two
+  customer: wendreo
