--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  name: MyString
-  price: 9.99
+apple:
+  name: Apple
+  price: 10
 
-two:
-  name: MyString
-  price: 9.99
+orange:
+  name: Orange
+  price: 20
