--- a/config/database.yml
+++ b/config/database.yml
@@ -15,7 +15,7 @@ default: &default
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: root
   password: 1993
-  socket: /var/run/mysqld/mysqld.sock
+ # socket: /var/run/mysqld/mysqld.sock
 
 development:
   <<: *default
