Add migration ItemProductPrice

--- a/test/fixtures/items.yml
+++ b/test/fixtures/items.yml
@@ -4,11 +4,11 @@ one:
   envoice: one
   product: apple
   amount: 2
-  product_price: 45 #mudar para 10?
+  product_price: 10.50
 
 two:
   envoice: one
-  product: apple #alterar aqui para orange?
+  product: orange
   amount: 3
   product_price: 30
 
@@ -16,10 +16,10 @@ three:
   envoice: two
   product: apple
   amount: 2
-  product_price: 45 #mudar para 10?
+  product_price: 10
 
 four:
   envoice: two
-  product: apple #alterar aqui para orange?
+  product: orange
   amount: 3
   product_price: 30
